# SlicerPETDenoise

./: CMakeLists.txt  LICENSE  README.md
Easy_fusion/: CMakeLists.txt  Easy_fusion.py
Easy_fusion/Resources/UI/: Easy_fusion.ui
PETDenoise/: CMakeLists.txt  PETDenoise.py  model_config.ini
PETDenoise/Resources/UI/: SlicerPETDenoise.ui
SlicerPETDenoise/: SlicerPETDenoise.py  model_config.ini
SlicerVolumeComparator/: CMakeLists.txt  SlicerVolumeComparator.py
VolumeComparator/: VolumeComparator.py
VolumeComparator/Resources/UI/: SlicerVolumeComparator.ui
